style.css
/* Reset CSS */

html {
  box-sizing: border-box;
  font-size: 0;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body, h1, h2, h3, h4, h5, h6, p, ol, ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol, ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

/* Styles */

body {
	background-image: repeating-linear-gradient(
		to bottom,
		#f2f2f2,
		#f2f2f2 0.3vh,
		#e4e4e4 0.6vh,
		#e4e4e4 0.9vh
	);
}

.menu-section {
	width: 100%;
	height: 100vh;
}

.menu-section .top {
	width: 100%;
	height: 72%;
	position: relative;	
}

.menu-section .top .mii-img {
	position: absolute;
	bottom: -20%;
	width: 45%;
	height: auto;
	max-width: none;
	aspect-ratio: 1 / 1;
	transition: bottom 0.5s ease;
}

.menu-section .top .mii-img:not(.loaded) {
	bottom: -100%;
}

.menu-section .top .menu-pages .page .tile {
	display: inline-block;
	width: 250px;
	aspect-ratio: 16 / 9;
	background-color: orange;
}

.menu-section .bottom {
	width: 100%;
	height: 28%;
	position: relative;
}

.menu-section .bottom svg {
	position: absolute;
	bottom: 0;
	width: 50%;
	height: 100%;
}

.menu-section .bottom .svg.left {
	left: 0;
}

.menu-section .bottom .svg.right {
	right: 0;
}

.menu-section .bottom .button-bg {
	position: absolute;
	top: 50%;
	transform: translate(0%, -50%);
	width: 14%;
	height: 72%;
	background-color: #42bada;
	opacity: 0.5;
	min-width: 175px;
}

.menu-section .bottom .button-bg.left {
	left: 0;
	border-top-right-radius: 45%;
	border-bottom-right-radius: 45%;
}

.menu-section .bottom .button-bg.right {
	right: 0;
	border-top-left-radius: 45%;
	border-bottom-left-radius: 45%;
}

.menu-section .bottom .button-container button {
	position: absolute;
	top: 5%;
	height: 80%;
	aspect-ratio: 1 / 1;
	border: none;
	background-color: green;
	cursor: pointer;
	border-radius: 50%;
}

.menu-section .bottom .button-container .left button {
	right: 10%;
}

.menu-section .bottom .button-container .right button {
	left: 10%;
}

@media (orientation: portrait) {
	.menu-section .top .mii-img {
		width: 100%;
		height: auto;
	}

	.menu-section .top {
		height: 80%;
	}
	
	.menu-section .bottom {
		height: 20%;
	}

	.menu-section .bottom .button-bg {
		width: 20%;
		height: 62%;
		min-width: 100px;
	}
}

